--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,11 +22,9 @@
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
-    <header class="page-header" role="banner">
-      <img src="http://catholicdata.org/assets/banner.png" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" />
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+    <header class="page-header" role="banner" style="background:url(http://catholicdata.org/assets/banner.png);background-repeat:no-repeat; background-position:center center; background-size:cover; min-height:220px;">
       {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+        <a href="{{ site.github.repository_url }}" class="btn" style="float:right; color:rgba(255,255,255,0.8); border-color:rgba(255,255,255,0.8);">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
