--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   <body>
     <!--<a id="skip-to-content" href="#content">Skip to the content.</a>-->
 
-    <header class="page-header" role="banner" style="background:url(http://catholicdata.org/assets/banner.png);background-repeat:no-repeat; background-position:center center; background-size:cover; min-height:220px;">
+    <header class="page-header" role="banner" style="background:url(https://catholicdata.org/assets/banner.png);background-repeat:no-repeat; background-position:center center; background-size:cover; min-height:220px;">
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn" style="float:right; color:rgba(255,255,255,0.8); border-color:rgba(255,255,255,0.8);">View on GitHub</a>
       {% endif %}
